stable.css
.stable {
    border: 1px solid;
    border-color: #333333 #181818 #181818 #333333;
}
.stable td {
    padding: 2px;
}
.stable-head td div {
  padding: 4px 16px 4px 6px !important;
}
.stable-head {
    background: #2a2a2a none repeat scroll 0 0;
	*background: #2a2a2a url("./images/headers.png") repeat-x scroll 0 -91px;
    border: medium none;
    color: #999;
    font-family: inherit;
    text-shadow: none;
}
div#tdcont .stable-head {
    border: none;
}
div#tdcont .stable {
    border: none;
}
.stable-head table tr {
    background: transparent;
    border: none;
}
.stable-head table tr td {
    background: transparent url("../images/blank.gif") no-repeat scroll right center;
    border-color: #222;
    border-style: none solid solid none;
    border-width: 0 1px 1px 0;
    font-family: Open Sans;
    font-size: 12px;
    font-weight: 600;
    line-height: 16px;
    text-transform: uppercase;
    white-space: nowrap;
}
.stable-head div.resz {
    border: 1px solid #FF0000;
    background: transparent url(./images/s.gif) no-repeat scroll left center;
}
.stable-body {
    background: window;
    text-shadow: none;
    color: #ccc;
}
.stable-body td {
    border-bottom: 1px solid #2a2a2a;
}
.stable-body td div {
	font-family: Open Sans !important;
	font-size: 11px;
	height: 21px !important;
	line-height: 21px;
}
.stable-body tr.odd td {
    background: #222;
}
.stable-body tr.odd:hover td {
    background: #333;
}
.stable-body tr.even td {
    background: #2a2a2a;
}
.stable-body tr {
    height: 22px;
}
.stable-body {
    background: #222 none repeat scroll 0 0
}
.stable-body tr.selected td {
	background: #343434 none repeat scroll 0 0;
	color: #009ddd;
	text-shadow: 0 0 4px #000;
}
div.stable-body table tbody tr.even td {
    background: #2a2a2a none repeat scroll 0 0;
}
div.stable-body table tbody tr.even:hover td {
    background: #333 none repeat scroll 0 0;
}
div.stable-body table tbody tr.even td:nth-child(2n+1) {
    color: #aaa;
}
div.stable-body table tbody tr.even:nth-child(2n+1) td {
  background: #2a2a2a none repeat scroll 0 0;
}
div.stable-body table tbody tr.even:hover:nth-child(2n+1) td {
    background: #333 none repeat scroll 0 0;
}
.stable-move-header {
    background: transparent url(./images/header_move.gif) repeat-x scroll center top;
    border: 1px solid #0099FF;
}
.stable-move-header {
    background: transparent url(./images/header_move.gif) repeat-x scroll center top rgba(128, 128, 128, 0.7);
    border: 1px solid #0099FF;
}
.gecko .stable-move-header {
    background: rgba(128, 128, 128, 0.7);
    -moz-opacity: 0.7;
}
.ie .stable-move-header {
    background: rgba(128, 128, 128, 0.7);
    filter: alpha(opacity=70)
}
.webkit .stable-move-header {
    background: rgba(128, 128, 128, 0.7);
}
.stable-active-header {
    border-color: threedface !important
}
.stable-separator-header {
    background: #181818;
}
.stable-scrollpos {
    background: #181818 url(./images/headers.png) repeat-x 0px -37px;
    height: 17px;
    line-height: 17px;
    border-bottom: 1px solid #333333;
}
.stable-scrollpos:nth-child(2n+1) {
    background: #181818 url(./images/headers.png) repeat-x 0px -64px;
}
.meter-value {
    float: left;
    border: 0px inset #1b1b1b;
    border-bottom: none;
    background: transparent;
    border-radius: 12px;
}
.stable-body tr.selected span.meter-value {
    color: #fff;
}
.meter-text {
	color: #fff;
	float: left;
	font-family: Open Sans;
	font-size: 11px;
	font-weight: 400;
	height: 0;
	left: 40%;
	line-height: 23px;
	overflow: visible;
	position: relative;
	text-align: left;
	text-shadow: 0 0 4px #6c7a89;
	width: 0;
	z-index: 1;
}
.stable-icon {
	background-position: center center;
	float: left;
	height: 21px;
	margin: 0 5px;
	padding: 0 !important;
	width: 18px;
}
.stable-List-col-3 div {
	height: 18px !important;
	text-align: left;
}
.stable-List-col-6 div {
	font-weight: 400;
	text-align: center;
	text-shadow: 0 0 4px #000;
}

